Styling of logged in user's posted songs. Other style tweaks here and there. Squashed a bug in song submit in seconds flat

--- a/src/components/Profiles/UserProfile.css
+++ b/src/components/Profiles/UserProfile.css
@@ -2,3 +2,18 @@
     color: white;
     font-weight: 600;
 }
+
+.card-profile {
+    min-width: 600px !important;
+    min-height: 300px !important;
+    box-shadow: 5px 5px black;
+}
+
+.row {
+    height: fit-content !important;
+
+}
+
+.card-body-profile {
+    border: 1px solid whitesmoke;
+}
